src/objects/Action_Behavior_Result__c.object
<CustomObject>
    <fields>
        <fullName>Action_Plan_Objective__c</fullName>
        <label>Action Plan Objective</label>
        <referenceTo>Action_Plan_Objective__c</referenceTo>
        <relationshipLabel>Action Behavior Results</relationshipLabel>
        <relationshipName>Action_Behavior_Results</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Day_time__c</fullName>
        <label>Day time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Occurred__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Occurred</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Occurrences__c</fullName>
        <label>Occurrences</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Action Behavior Result</label>
    <nameField>
        <label>Action Behavior Result Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Action Behavior Results</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>